--- a/LICENSE.org
+++ b/LICENSE.org
@@ -1,3 +1,5 @@
+Copyright (c) 2021 J. Greg Davidson, greg.davidson@gmail.com
+
 Attribution-ShareAlike 4.0 International
 
 =======================================================================
