--- a/GUIDE.org
+++ b/GUIDE.org
@@ -64,8 +64,10 @@ A more common but maybe less clear version:
 ** [[file:Programs/putint1.c][putint1.c]]
 ** [[file:Programs/putint2.c][putint2.c]]
 *** Exercise challenge:
-Change PutInt so that it prints large integers with commas
-in each third place - or as done in your country.  Hints:
+Change PutInt so that it prints large integers with commas to group the digits
+  - groups can have up to 3 digits
+  - or the convention used in your country
+Hints:
 - Add a new parameter to PutPosInt which tracks your position
 - PutInt should pass a 0 to initialize the new parameter
 - Be /Maximally Lazy/: each call to PutPosInt should
