--- a/GUIDE.org
+++ b/GUIDE.org
@@ -3,7 +3,7 @@
 #+DATE: Circa 2021
 #+OPTIONS: num:nil
 
-* Study Guide
+* Progressive Examples
 
 ** [[file:Programs/hello1.c][hello1.c]]
 [[file:Programs/hello1+comments.c][hello1+comments.c]]
@@ -45,6 +45,19 @@
 ** [[file:Programs/struct6.c][struct6.c]]
 ** [[file:Programs/args.c][args.c]]
 ** [[file:Programs/dates.c][dates.c]]
+** [[file:Programs/putint1.c][putint1.c]]
+** [[file:Programs/putint2.c][putint2.c]]
+*** Exercise challenge:
+Change PutInt so that it prints large integers with commas to group the digits
+  - groups can have up to 3 digits
+  - or the convention used in your country
+Hints:
+- Add a new parameter to PutPosInt which tracks your position
+- PutInt should pass a 0 to initialize the new parameter
+- Be /Maximally Lazy/: each call to PutPosInt should
+  - either print a single digit
+  - or a single comma 
+  - or print nothing!
 ** [[file:Programs/getline1.c][getline1.c]]
 A more common but maybe less clear version:
  [[file:Programs/getline.c][getline.c]]
@@ -60,17 +73,3 @@ A more common but maybe less clear version:
      array is full and more characters remain in the input line.
    - All input characters need to placed into the final dynamically allocated
      array as before.
-
-** [[file:Programs/putint1.c][putint1.c]]
-** [[file:Programs/putint2.c][putint2.c]]
-*** Exercise challenge:
-Change PutInt so that it prints large integers with commas to group the digits
-  - groups can have up to 3 digits
-  - or the convention used in your country
-Hints:
-- Add a new parameter to PutPosInt which tracks your position
-- PutInt should pass a 0 to initialize the new parameter
-- Be /Maximally Lazy/: each call to PutPosInt should
-  - either print a single digit
-  - or a single comma 
-  - or print nothing!
